# just_buy

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml
.build/: .env_example  docker-compose.yaml
.build/app/: Dockerfile
.build/proxy/: Dockerfile
.build/proxy/conf.d/: default.conf
collection/: collection.json
migrations/: 20230915115824_users_create.sql  20230916023816_products_create.sql  20230916023900_carts_create.sql  20230916023930_carts_products_create.sql  20230916031039_insert_products_data.sql  20230916031416_insert_users_data.sql  20230920161423_add_token_for_user.sql  20230920164056_add_role_for_user.sql
src/: main.rs
src/cart/: mod.rs
src/cart/controllers/: mod.rs
src/cart/dto/: mod.rs
src/cart/repository/: cart_data.rs  cart_model.rs  mod.rs
src/cart/service/: mod.rs
src/models/: mod.rs  models_data.rs
src/order/: mod.rs
src/order/controllers/: mod.rs
src/order/dto/: mod.rs
src/order/repository/: mod.rs  order_data.rs  order_model.rs
src/order/service/: mod.rs
src/product/: mod.rs
src/product/controllers/: mod.rs
src/product/dto/: mod.rs
src/product/repository/: mod.rs  product_data.rs  product_model.rs
src/product/service/: mod.rs
src/repository/: database.rs  mod.rs  product_repository.rs  user_repository.rs
src/shared/: error_handler.rs  errors.rs  mod.rs  responses.rs
src/shared/controllers/: mod.rs
src/shared/db/: mod.rs
src/shared/middleware/: mod.rs  token_middleware.rs
src/shared/service/: mod.rs  (+2 more)
src/user/: mod.rs
src/utils/: load_config.rs
static/root/: index.html
(+17 files in other folders)
